Fix ios 7 layout issues and fix some naming.

--- a/src/styl/fancy-end-screen.styl
+++ b/src/styl/fancy-end-screen.styl
@@ -37,14 +37,16 @@ $end-screen-mixin($scale-size = $default-scale-size) {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 2%;
-      height: 100%;
+      margin: .8rem;
+      width: calc(100% - 1.6rem);
+      height: calc(100% - 1.6rem);
     }
 
     .end-screen-info-background {
       position: relative;
       align-items: center;
-      width: auto;
+      width: 100%;
+      height: 50%;
       background-color: transparent;
     }
 
@@ -58,7 +60,7 @@ $end-screen-mixin($scale-size = $default-scale-size) {
       align-items: center;
       justify-content: center;
       width: 100%;
-      height: 100%;
+      height: 50%;
     }
 
     .store-container {
@@ -183,10 +185,6 @@ $end-screen-mixin($scale-size = $default-scale-size) {
 
   body {
     &.portrait #end-screen.fancy-end-screen {
-      .content-container {
-        margin: 4% 4% 4% 4%;
-      }
-
       .btn-close-region {
         margin: 2%;
       }
@@ -211,15 +209,13 @@ $end-screen-mixin($scale-size = $default-scale-size) {
 
     &.landscape #end-screen.fancy-end-screen {
       .end-screen-info-background {
-        flex: 5;
         align-items: stretch;
-        width: auto;
+        margin-left: .5rem;
+        width: calc(50% - .5rem);
       }
 
       .content-container {
         flex-direction: row;
-        width: auto;
-        height: 100%;
       }
 
       .end-screen-info {
@@ -247,9 +243,8 @@ $end-screen-mixin($scale-size = $default-scale-size) {
       }
 
       .game-image-container {
-        flex: 5;
-        margin-right: 5%;
-        width: auto;
+        margin-right: .5rem;
+        width: calc(50% - .5rem);
         height: 100%;
       }
 
